After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 766597 - kmssink: doesn't chain up finalize
kmssink: doesn't chain up finalize
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.9.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-05-18 09:30 UTC by Guillaume Desmottes
Modified: 2016-05-19 19:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
kmssink: chain up finalize method (1.04 KB, patch)
2016-05-18 09:31 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2016-05-18 09:30:58 UTC
.
Comment 1 Guillaume Desmottes 2016-05-18 09:31:20 UTC
Created attachment 328126 [details] [review]
kmssink: chain up finalize method
Comment 2 Olivier Crête 2016-05-19 19:36:35 UTC
Merged:

commit 7ffe5da49fa2e4e8f4e8104785a19e5e88074922
Author: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>
Date:   Wed May 18 12:30:05 2016 +0300

    kmssink: chain up finalize method
    
    https://bugzilla.gnome.org/show_bug.cgi?id=766597