kmssink: chain up finalize method

https://bugzilla.gnome.org/show_bug.cgi?id=766597